# mlops-hw3-e2e-ml-pipeline

./: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  run-airflow-standalone.sh  setup.sh
dags/: evaluate_agent.py  evaluate_agent_local.py
pipeline/: helpers.py
scripts/: mini-swe-bench-batch.sh  swe-bench-eval.sh
