[project]
name = "mlops-assignment-e2e-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-docker>=4.5.7",
    "apache-airflow[postgres]>=3.2.2",
    "boto3>=1.43.36",
    "datasets>=2.20.0",
    "mini-swe-agent>=2.4.1",
    "mlflow>=3.14.0",
    "swebench>=4.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
